<resources>
    <string name="app_name">RentARide</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Stuff</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="WELCOME">Welcome to Rent A Ride!!</string>
    <string name="SCR_LBL_MAIN_GIVE_US_YOUR_NUMBER">Give us your Mobile Number and leave the rest to us 😉</string>
    <string name="PLACEHOLDER_ENTER_MOBILE_NUMBER">Enter Mobile Number</string>
    <string name="SCR_TITLE_ENTER_MOBILE_NUMBER">Enter mobile number</string>
    <string name="SCR_TITLE_ACTIVATE_APP">Activate App</string>
    <string name="SCR_LBL_WE_WILL_TEXT_YOU_A_CODE">We will text you a code to verify</string>
    <string name="SCR_LBL_SELECT_MARKET">Select Market</string>
    <string name="SCR_TITLE_MOBILE_NUMBER">Mobile number</string>
    <string name="INPUT_TITLE_MOBILE_NUMBER_CAPS">MOBILE NUMBER</string>
    <string name="SCR_LBL_WE_WILL_TEXT_YOU_CODE">We will text you a code to verify your mobile number.</string>
    <string name="SCR_LBL_DASHBOARD_HEADING_VIEW_ALL_UNDER_LINE"><u>View All</u></string>
    <string name="SCR_LBL_SHARE_SEND_TO">Send to</string>
    <string name="SCR_LBL_NOTIFICATIONS">Notifications</string>
    <string name="SCR_LBL_SHARE_APP">Share App</string>
    <string name="SCR_LBL_INVITE_A_FRIENDS">Invite a friend</string>
    <string name="SCR_LBL_CHANGE_LANGUAGE">Change Language</string>
    <string name="SCR_LBL_LOGOUT">Log out</string>
    <string name="ERR_MSG_FINGER_PRINT_FAILED">Fingerprint not recognised. Please try again</string>
    <string name="INFO_MSG_FINGERPRINT_SUCCEED">Fingerprint Authentication succeeded.</string>
    <string name="INFO_TITLE_ALERT">Alert</string>
    <string name="SCR_LBL_OK">ok</string>
    <string name="SCR_LBL_CANCEL">Cancel</string>
    <string name="SCR_LBL_CONFIRM_FINGERPRINT">Confirm fingerprint</string>
    <string name="BTN_CANCEL">Cancel</string>
    <string name="BTN_USE_PIN">USE PIN</string>
    <string name="SCR_LBL_PLACE_YOUR_FINGER_PRINT">Place your finger on the sensor \n to confirm</string>
    <string name="SCR_LBL_HIDE">Hide</string>
    <string name="SCR_LBL_SHOW">Show</string>
    <string name="BTN_SHOW">Show</string>
    <string name="INFO_MSG_FINGER_SENSOR_PERMISSION">Fingerprint authentication permission not enabled</string>
    <string name="INFO_MSG_REGISTER_FINGER_PRINT">Register at least one fingerprint in Settings</string>
    <string name="INFO_MSG_LOCK_SCREEN_SECURITY">Lock screen security not enabled in Settings</string>
    <string name="SCR_LBL_MY_SELF">Myself</string>
    <string name="SCR_TITLE_CONFIRM_PAYMENT">Confirm payment</string>
    <string name="SCR_TITLE_CONFIRM_PROFILE">Confirm profile</string>
    <string name="SCR_LBL_SEND_MONEY_TEXT_EMAIL">Send money to anyone via text or email</string>
    <string name="SCR_TITLE_LINK_HEADING">You\'re all set to share your link with everyone</string>
    <string name="SCR_LBL_CHOOSE_SOMEONE_SEND_EMAIL">Choose someone from your contacts,or send them an email, and they\'ll be able to get the money even if they don\'t have any  account</string>
    <string name="SCR_LBL_LINK_HEADING_CONTENT">Choose how you\'d like to share GHS 4,567 and the money will be sent as soon as they claim it</string>
    <string name="SCR_LBL_LINK_BY_SENDING_THE_LINK_YOU_AGREE">By sending the link you agreee to send money to the recipient\'s choosen account</string>
    <string name="SCR_LBL_XPRESS_HEADING">Welcome to Xpress Cash</string>
    <string name="SCR_LBL_XPRESS_CONTENT">This service allows you to withdraw money from an  ATM </string>
    <string name="BTN_ATM">ATM</string>
    <string name="SCR_LBL_ACTIVE_E_TOKENS">Active E-Tokens</string>
    <string name="SCR_LBL_VIEW_ALL">VIEW ALL</string>
    <string name="SCR_TITLE_YOU_HAVE_NO_ACTIVE_E_TOKENS">You have no active e-tokens</string>
    <string name="WAR_TITLE_CONFIRM">Confirm</string>
    <string name="INPUT_TITLE_ENTER_PIN_NUMBER">Enter pin number</string>
    <string name="SCR_LBL_PAY_BILL">Pay Bill</string>
    <string name="SCR_TITLE_VIEW_BALANCE">View Balance</string>
    <string name="BTN_DONE">Done</string>
    <string name="BTN_CONFIRM_STANDING_ORDER">Confirm Standing Order</string>
    <string name="SCR_LBL_SCROLL_TO_BOTTOM">Scroll to bottom</string>
    <string name="BTN_DECLINE">Decline</string>
    <string name="SCR_LBL_PRIVACY">Privacy Policy</string>
    <string name="SCR_LBL_TITLE_HEADING__EXPRESS_CONDITIONS"> Xpress account</string>
    <string name="BTN_ACCEPT">Accept</string>
    <string name="SCR_LBL_ATM_NO_TOKEN_SUBTITLE_ONE">You don\'t have any money requests today!</string>
    <string name="SCR_LBL_ATM_NO_TOKEN_SUBTITLE_TWO">Make a New Request</string>
    <string name="BTN_OK">Ok</string>
    <string name="BTN_YES">Yes</string>
    <string name="BTN_UPDATE">Update</string>
    <string name="BTN_CLOSE">Close</string>
    <string name="BTN_NO">No</string>
    <string name="BTN_SELECT_CURRENCY">Select Currency</string>
    <string name="BTN_SELECT_PRODUCT">Select Product</string>
    <string name="SCRL_LBL_MOBILE_MONEY_TRANSFER">Mobile money Transfer</string>
    <string name="SCRL_LBL_Pay">Pay</string>
    <string name="SCR_LBL_PAYMERCHANT">Pay Merchant</string>
    <string name="SCR_LBL_TRANSACT">Transact</string>
    <string name="SCR_LBL_BY_AIRTIME">Buy Airtime</string>
    <string name="SCR_LBL_TRANSFER">Transfer</string>
    <string name="SCR_LBL_TRANSFERED">TRANSFERED</string>
    <string name="SCR_LBL_XPRESS_CASH">Xpress Cash</string>
    <string name="BTN_VIEW_E_TOKEN">View e-token</string>
    <string name="BTN_VIEW_VIRTUAL_CARD">View Virtual Card</string>
    <string name="SCR_LBL_WITHDRAWN">WITHDRAWN</string>
    <string name="SCR_LBL_XPRESS_CASH_POINT">Xpress Cash Point</string>
    <string name="SCR_LBL_PAY_MERCHANT">Pay a Merchant</string>
    <string name="SCR_TITLE_PAY_A_MERCHANT">Pay a Merchant</string>
    <string name="SCR_LBL_PAYBILLS">Pay Bills</string>
    <string name="SCR_LBL_SPLIT_PAYMENTS">Split Payments</string>
    <string name="SCR_LBL_SPLIT_PAYMENT">Split Payment</string>
    <string name="BTN_PAY_A_NEW_MERCHANT">Pay a New Merchant</string>
    <string name="SCR_TITLE_SCAN_QR">Scan QR</string>
    <string name="SCR_TITLE_MANAGE_BENEFIRIES">Manage Beneficiaries</string>
    <string name="SCR_TITLE_ACTIVITY_ENTER_AMOUNT_PAY_MERCHANT">EnterAmountPayAMerchantActivity</string>
    <string name="SCR_LBL_SELECT_ACCOUNT">Select Account</string>
    <string name="SCR_LBL_DEPOSIT_TO">DEPOSIT TO</string>
    <string name="SCR_LBL_REQUEST_MONEY_FROM">REQUEST MONEY FROM</string>
    <string name="VAL_MSG_SELECT_ACCOUNT">Select account</string>
    <string name="SCR_LBL_ACCOUNT_SELECTED">Account Selected</string>
    <string name="PLACEHOLDER_MERCHANT_NAME">Enter Merchant Name</string>
    <string name="SCR_TITLE_ACTIVITY_REVIEW_AND_PAY_MERCHANT">ReviewAndPayPayAMerchantActivity</string>
    <string name="PLACEHOLDER_SAVING_ACCOUNT">Savings account</string>
    <string name="SCR_LBL_NEW_NOTIFICATION">New notifications</string>
    <string name="SCR_LBL_PAST_NOTIFICATION">Past notifications</string>
    <string name="SCR_TITLE_NOTIFICATIONS">Notifications</string>
    <string name="SCR_LBL_SWITCH_OFF_NOTIFICATIONS">Switch off notifications</string>
    <string name="SCR_LBL_SWITCH_ON_NOTIFICATIONS">Switch on notifications</string>
    <string name="SCR_LBL_BUY_AIRTIME_MSG">Dear customer, we are processing your request. You will receive a response shortly.</string>
    <string name="SCR_LBL_ADD_CARD_DESCRIPTION">Add a card and use it to transact on  mobile.</string>
    <string name="SCR_LBL_ADD_CARD">Add a card</string>
    <string name="BTN_ADD_A_CARD">Add a card</string>
    <string name="SCR_LBL_CARD_ADDED">Card added</string>
    <string name="SCR_LBL_ACCOUNT_ADDED">Account added</string>
    <string name="SCR_LBL_ACCOUNT_REMOVED">Account Removed</string>
    <string name="SCR_TITLE_MORE_SERVICE">More Services</string>
    <string name="SCR_LBL_MORE">More</string>
    <string name="SCR_LBL_SECURITY_SETTING">Security Setting</string>
    <string name="SCR_LBL_MANAGE_BENEFICIRIES">Manage Beneficiaries</string>
    <string name="SCR_LBL_LOAN_AND_DEPOSITE">Loan and Deposit</string>
    <string name="SCR_LBL_CHEQUE_SERVICES">Cheque Sevices</string>
    <string name="SCR_LBL_FULL_STATEMENT">Full Statement</string>
    <string name="SCR_LBL_LEGAL">Legal</string>
    <string name="SCR_TITLE_CONTACT_US">Contact us</string>
    <string name="SCR_LBL_CONTACT_US">Contact us</string>
    <string name="SCR_TITLE_CARD_SERVICES">Card Services</string>
    <string name="SCR_LBL_VIRTUAL_CARDS">Virtual Cards</string>
    <string name="SCR_LBL_MANAGE_CARDS">Manage Cards</string>
    <string name="SCR_TITLE_MANAGE_CARDS">Manage Virtual Cards</string>
    <string name="SCR_LBL_LOCK_UNLOCK_CARD">Block/Unblock Card</string>
    <string name="SCR_TITLE_LOCK_UNLOCK_CARD">Block/Unblock Card</string>
    <string name="SCR_LBL_VIRTUAL_CARD_CONTENT">This service will allow you to request and manage your virtual cards </string>
    <string name="SCR_LBL_LOAN_CATEGORY_NAME">Fixed interest Auto Loan</string>
    <string name="INPUT_TITLE_RATE">rate</string>
    <string name="SCR_LBL_NO_LOAN">You do not have a Loan</string>
    <string name="SCR_LBL_OFFER"> loans offers you flexible repayment
plans and options to access additional funds
after repayment over time.</string>
    <string name="SCR_LBL_NOTERM"> Term loan can guarantee the rate
of your savings from a term within a time frame chosen by you</string>
    <string name="SCR_LBL_REQUEST_CHEQUE">Request Cheque Book.</string>
    <string name="BTN_CONFIRM_CHEQUE">Confirm Cheque</string>
    <string name="SCR_LBL_CONFIRM_CHEQUE">Confirm Cheque</string>
    <string name="BTN_STOP_CHEQUE">Stop Cheque</string>
    <string name="BTN_STOP_CHEQUE_STOP_CHEQUE">Stop Cheque</string>
    <string name="SCR_LBL_SELECT_ACCOUNT_TO_LINK_YOUR_CHEQUE">Please select the account you would like to link to your cheque</string>
    <string name="SCR_LBL_SELECT_ACCOUNT_ACCOCIATED_WITH_YOUR_CHEQUE">Please select account associated with your cheque</string>
    <string name="PLACEHOLDER_REASON_TO_REQUEST">Reason for request</string>
    <string name="INFO_MSG_REQUEST_SENT">Request Sent</string>
    <string name="BTN_REQUEST_CHEQUE">Request Cheque</string>
    <string name="BTN_CONTINUE">Continue</string>
    <string name="BTN_REQUEST">Request</string>
    <string name="SCR_LBL_GENERATE_E_TOKEN">Generate e-token</string>
    <string name="SCR_TITLE_ACTIVATE_YOUR_ACCOUNT">Activate your account</string>
    <string name="SCR_TITLE_ACTIVE">active</string>
    <string name="SCR_LBL_ENJOY_MOBILE_SERVICE">To be able to enjoy our mobile banking services, please use the following methods to activate your account</string>
    <string name="BTN_USE__DEBIT_CARD">Use  Debit Card</string>
    <string name="BTN_USE_INTERNET_BANKING_DETAILS">Use Internet Banking Details</string>
    <string name="BTN_SAVE">Save</string>
    <string name="SCR_LBL_ADD_A_NEW_AIRTIME_BENEFICIARY">Add a new airtime beneficiary</string>
    <string name="SCR_TITLE_EDIT_AIRTIME_BENEFICIARY_DETAILS">Edit Airtime Beneficiary details</string>
    <string name="VAL_MSG_PLEASE_ENTER_BENEFICIARY_MOBILE_NUMBER">Please enter beneficiary mobile number</string>
    <string name="SCR_LBL_YOUR_PROFILE_HAS_BEEN_CREATED_SUCCESSFULLY_PLEASE_CONTINUE_TO_THE_NEXT_PAGE_TO_SET_YOUR_PIN">Your profile has been created successfully. Please continue to the next page to set your PIN.</string>
    <string name="SCR_LBL_CREATE_6_DIGIT_PIN">Create 6 digit PIN</string>
    <string name="BTN_NEXT">Next</string>
    <string name="SCR_LBL_SUBTITLE_SUCCESS">Success!</string>
</resources>