<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:backgroundTint="#90A9A9A9"
    android:backgroundTintMode="src_over"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sp"
            android:layout_marginStart="@dimen/_10sp"
            android:layout_marginEnd="@dimen/_10sp">

            <TextView
                android:id="@+id/txt_uptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SCR_LBL_MAIN_GIVE_US_YOUR_NUMBER"
                android:textSize="@dimen/_20sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sp"
            android:textColorHint="@color/colorPrimary"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24"
            app:startIconContentDescription="icon"
            app:prefixText="+254 "
            app:prefixTextColor="@color/colorPrimary"
            app:helperTextEnabled="true"
            app:helperText="+2547XXXXXXXX"
            app:helperTextTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/editMsisdn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PLACEHOLDER_ENTER_MOBILE_NUMBER"
                android:ems="20"
                android:inputType="phone"
                android:textSize="@dimen/_15sp"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginBottom="@dimen/_40dp"
            android:text="@string/BTN_NEXT"
            android:layout_marginStart="@dimen/_20sp"
            android:layout_marginEnd="@dimen/_20sp"
            />
    </LinearLayout>
</LinearLayout>