<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/lin_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/_6ccf00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/center_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginRight="@dimen/_16dp"
        android:background="@drawable/ic_success_card">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_70dp"
            android:layout_marginRight="@dimen/_20dp"
            android:fontFamily="@font/gf_gilory_semibold"
            android:text="@string/SCR_LBL_SUBTITLE_SUCCESS"
            android:textAlignment="center"
            android:textColor="@color/_005B82"
            android:textSize="@dimen/_26sp"
            android:gravity="center_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_marginRight="@dimen/_20dp"
            android:fontFamily="@font/gf_gilroy_bold"
            android:text="Request sent"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/_8e8e93"
            android:textSize="@dimen/_14sp"
            android:visibility="gone"
            android:gravity="center_horizontal" />


        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/_50dp"
            android:layout_height="2px"
            android:layout_below="@+id/txt_title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:background="@color/_6ccf00" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_marginRight="@dimen/_40dp"
            android:fontFamily="@font/gf_gilroy_medium"
            android:gravity="center_horizontal"
            android:text="@string/SCR_LBL_YOUR_PROFILE_HAS_BEEN_CREATED_SUCCESSFULLY_PLEASE_CONTINUE_TO_THE_NEXT_PAGE_TO_SET_YOUR_PIN"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:visibility="visible" />


        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/_50dp"
            android:layout_height="2px"
            android:layout_below="@+id/txt_message"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:background="@color/_6ccf00" />


    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/center_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        android:src="@drawable/ic_success_big_80" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_4dp"
        android:background="@drawable/round_rect_shape"
        android:elevation="0dp"
        android:fontFamily="@font/gilroy_semibold"
        android:padding="@dimen/_4dp"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sp"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginRight="@dimen/_40dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/SCR_LBL_CREATE_6_DIGIT_PIN" />

</RelativeLayout>